# kantan-llm

./: README.md  README_ja.md  pyproject.toml
docs/: architecture.md  concept.md  plan.md  search.md  spec.md  tracing.md  tutorial_trace_analysis.md
docs/spec/: SPEC-ASYNC-001.md
docs/tutolias/: 01_getting_started.md  02_tracing_basics.md  03_sqlite_tracing.md  04_trace_search.md  05_judge_loop.md  06_utilities.md  07_full_story.md  README.md
examples/: agents_sdk_lmstudio.py  agents_sdk_tracing.py  search_sqlite.py  tracing_basic.py
kantan_llm/: __init__.py  errors.py  providers.py  wrappers.py
kantan_llm/tracing/: __init__.py  create.py  processors.py  search.py  span_data.py
tests/: test_get_llm.py  test_search_sqlite.py  test_tracing.py
tests/integration/: test_live_async_streaming.py  test_live_openrouter_google.py  test_live_providers.py
